# TypoDetect

./: .gitignore  CHANGELOG.md  LICENSE  README.md  name_guard.spec  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yaml  ci.yaml  release.yml
typodetect/: __init__.py  name_guard.py
